--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
+    "jquery": "^3.4.1",
     "parallax-js": "^3.1.0",
+    "popper.js": "^1.16.0",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.4"
   },
