--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
+    "firebase": "^7.2.3",
     "jquery": "^3.4.1",
     "parallax-js": "^3.1.0",
     "popper.js": "^1.16.0",
